--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "royal-diadems",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express.js": "^1.0.0",
     "nodemon": "^2.0.15"
