--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,7 @@
   "hosting": {
     "public": "public",
     "site": "royal-diadems",
+    "cleanUrls": true,
     "ignore": [
       "firebase.json",
       "**/.*",
